tests/baselines/reference/parserClassDeclaration1.errors.txt
parserClassDeclaration1.ts(1,17): error TS2304: Cannot find name 'A'.
parserClassDeclaration1.ts(1,19): error TS1172: 'extends' clause already seen.


==== parserClassDeclaration1.ts (2 errors) ====
    class C extends A extends B {
                    ~
!!! error TS2304: Cannot find name 'A'.
                      ~~~~~~~
!!! error TS1172: 'extends' clause already seen.
    }